--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,10 +10,11 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    position: relative;
     padding: 40px 10px;
     border-radius: 0 0 20px 0;
 }
-.logo{
+.sideBar h2{
     text-align: center;
     font-size: 50px;
     flex: 1;
@@ -21,6 +22,7 @@
     width: 100%;
     border-radius: 0 0 10px 10px;
     padding-top: 20px;
+    font-family: 'Lobster', cursive;
 }
 .welcome{
     text-align: center;
@@ -94,25 +96,31 @@
     justify-content: space-between;
     margin-top: 10px;
 }
-.containerInputs label, input{
-    cursor: pointer;
-}
-.containerInputs label{
-    color: #797979;
+
+.selectStatusSearch{
+    height: 30px;
+    width: 80%;
+    margin-top: 15px;
+    border-radius: 13px;
+    padding: 4px 6px;
     font-size: 15px;
+    border: 1px solid rgba(17, 27, 75, 0.9);
 }
-.statusTask{
-    color: #6a6969;
-    font-size: 17px;
+.selectStatusSearch option{
+    background-color: rgba(17, 27, 75, 0.9);
+    color: #fff;
+    padding-bottom: 10px;
 }
+
 .button-search{
     margin-top: 30px;
     height: 50px;
     width: 150px;
 }
-.button-search p {
-
+.button-search a {
+    text-decoration: none;
     font-size: 17px;
+    color: #fff;
 }
 .show{
     display: flex ;
@@ -121,17 +129,12 @@
     text-decoration: none;
     color: #000;
 }
-
-.linkLogo{
-    font-family: 'Lobster', cursive;
-
-}
 /*Medias Queries*/
 
-@media(max-width: 720px) {
+@media(max-width: 1024px) {
     .menuIcon{
         display: flex;
-        position: absolute;
+        position: fixed;
         top: 20;
         left: 20;
         margin: 20px;
@@ -139,7 +142,7 @@
     }    
     .sideBar{
         display: none;
-        position:absolute ;
+        position:fixed ;
         top:0;
         left:0;
         width: 80%;
